2008-10-21  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extHashtbl.ml*: [print] added

	* src/core/extlib/extBuffer.ml*: in [print], removed optional arguments

	* src/core/extlib/dynArray.ml*: [print] added

	* src/core/extlib/enum.ml*: in [print], put optional arguments first

	* src/core/extlib/dllist.ml*: [print] added

	* src/core/extlib/bitSet.ml*: in [print], removed optional arguments

	* src/core/extlib/extList.ml*: in [print], put optional arguments first

	* src/core/extlib/extArray.ml*: in [Cap], added [print], [of_sexp], [to_sexp]

	* src/core/extlib/extArray.ml*: in [print], put optional arguments first

	* src/core/extlib/extPervasives.ml*: [input_value] added, [output_value] now [ExtMarshal.Marshal.output]

	* src/core/extlib/extMarshal.ml*: created

	* src/main/nothreads/batteries.mllib: [Pervasives], [Buffer], [Complex], [Big_int], [Num], [Printf], [Stream], [Int64], [Int32] removed

	* src/core/batteries_core.ml: [ExtPervasives.Pervasives] replaced with [Extlib.Extpervasives.Pervasives]

	* Makefile: in [install], added [IO.cmi], [innerIO.cmi], [toolchain.cmi]
	
	* src/core/extlib.mlpack: [ExtPervasives] added

	* src/core/extlib/extUChar.mli: in [of_digit], fixed [@raise]

2008-10-20  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/batteries_core.ml: [Standard] now contains [ExtPervasives.Pervasives]

	* src/core/extlib/extPervasives.ml*: created

	* src/core/extlib/extFloat.mli: [fpclass] renamed [fpkind]

	* src/core/extlib/extBuffer.ml*: [enum], [of_enum] added

	* src/core/batteries_core.ml: [Buffer] is now [ExtBuffer.Buffer]

	* src/core/extlib/extBuffer.ml*: created

	* src/core/extlib/rope.ml*: [bulk_backwards], [of_bulk_backwards] removed

	* src/core/extlib/extString.ml: in [backwards], [i] shifted by 1

	* src/core/extlib/ref.ml: [pre_decr], [post_decr] now add [-1]

	* src/core/extlib/enum.ml: [print] now uses [print_a] to print the contents of the enumeration
