@@ -75,3 +75,6 @@ exception No_value
 val t_of_sexp : (Sexplib.Sexp.t -> 'a) -> Sexplib.Sexp.t -> 'a t
 val sexp_of_t : ('a -> Sexplib.Sexp.t) -> 'a t -> Sexplib.Sexp.t
 
+(** {7 Printing}*)
+
+val print : ('a InnerIO.output -> 'b -> unit) -> 'a InnerIO.output -> 'b t -> unit
